--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -14,15 +14,29 @@
     .post-link {
         display: block;
         overflow: hidden;
+        @media only screen and(min-width: 769px) {
+            float: left;
+            padding-right: 15px;
+        }
         .image {
             width: 100%;
             height: 250px;
             object-fit: cover;
             object-position: center center;
+            @media only screen and(min-width: 769px) {
+                width: 140px;
+                height: 100px;
+            }
         }
     }
     .caption {
         padding: 10px 0 0 0;
+        @media only screen and(min-width: 769px) {
+            float: left;
+            width: 150px;
+            overflow: hidden;
+
+        }
     }
 }
 
@@ -37,4 +51,69 @@
 
 .footer-colsystem {
     margin-bottom: 20px;
+}
+.breadcrumb {
+    margin-top: 30px;
+}
+
+#cartform {
+    .link {
+        display: block;
+        width: 90px;
+        height: 90px;
+        overflow: hidden;
+        .img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+        }
+    }
+    .item-row {
+        border-bottom: 1px solid #ccc;
+        padding: 15px 0;
+        .name {
+            font-size: 12px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            width: 100px;
+            display: block;
+        }
+    }
+}
+
+#detail-product {
+    .thumbnail {
+        height: 50px;
+        width: 50px;
+        display: block;
+        overflow: hidden;
+        float: left;
+        padding: 0;
+        margin: 5px 5px 5px 0;
+        img {
+            margin-top: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+        }
+    }
+    .image-product-carousel {
+        height: 250px;
+        width: 100%;
+        object-fit: cover;
+        object-position: center center;
+        @media only screen and(min-width: 480px) {
+            height: 350px;
+        }
+        @media only screen and(min-width: 768px) {
+            height: 400px;
+        }
+    }
+}
+
+.ClickBlogItem {
+    display: block;
 }
