--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -1,3 +1,9 @@
+.carttop_wrapper {
+    span {
+        font-weight: bold;
+        color: #000;
+    }
+}
 .product-item-wrapper {
     .product-information {
         .image {
