--- a/public/shop/assets/hstatic.net/969/1000003969/1000161857/nobita.css?v=8910.css
+++ b/public/shop/assets/hstatic.net/969/1000003969/1000161857/nobita.css?v=8910.css
@@ -1565,7 +1565,7 @@ dd {
 		margin-left: 180px
 	}
 	.container {
-		width: 750px
+		// width: 750px
 	}
 }
 abbr[data-original-title],
@@ -1666,8 +1666,7 @@ pre {
 }
 .container,
 .container-fluid {
-	margin-right: auto;
-	margin-left: auto;
+
 }
 pre code {
 	padding: 0;
@@ -1680,643 +1679,7 @@ pre code {
 	max-height: 340px;
 	overflow-y: scroll
 }
-.container {
-	padding-left: 15px;
-	padding-right: 15px
-}
-@media (min-width: 992px) {
-	.container {
-		width: 970px
-	}
-}
-@media (min-width: 1200px) {
-	.container {
-		width: 1230px
-	}
-}
-.row {
-	margin-left: -15px;
-	margin-right: -15px
-}
-.col-lg-1,
-.col-lg-10,
-.col-lg-2,
-.col-lg-3,
-.col-lg-4,
-.col-lg-5,
-.col-lg-6,
-.col-lg-7,
-.col-lg-8,
-.col-lg-9,
-.col-md-1,
-.col-md-10,
-.col-md-2,
-.col-md-3,
-.col-md-4,
-.col-md-5,
-.col-md-6,
-.col-md-7,
-.col-md-8,
-.col-md-9,
-.col-sm-1,
-.col-sm-10,
-.col-sm-2,
-.col-sm-3,
-.col-sm-4,
-.col-sm-5,
-.col-sm-6,
-.col-sm-7,
-.col-sm-8,
-.col-sm-9,
-.col-xs-1,
-.col-xs-10,
-.col-xs-2,
-.col-xs-3,
-.col-xs-4,
-.col-xs-5,
-.col-xs-6,
-.col-xs-7,
-.col-xs-8,
-.col-xs-9 {
-	position: relative;
-	min-height: 1px;
-	padding-left: 15px;
-	padding-right: 15px
-}
-.col-xs-1,
-.col-xs-10,
-.col-xs-2,
-.col-xs-3,
-.col-xs-4,
-.col-xs-5,
-.col-xs-6,
-.col-xs-7,
-.col-xs-8,
-.col-xs-9 {
-	float: left
-}
-.col-xs-10 {
-	width: 100%
-}
-.col-xs-9 {
-	width: 90%
-}
-.col-xs-8 {
-	width: 80%
-}
-.col-xs-7 {
-	width: 70%
-}
-.col-xs-6 {
-	width: 60%
-}
-.col-xs-5 {
-	width: 50%
-}
-.col-xs-4 {
-	width: 40%
-}
-.col-xs-3 {
-	width: 30%
-}
-.col-xs-2 {
-	width: 20%
-}
-.col-xs-1 {
-	width: 10%
-}
-.col-xs-pull-10 {
-	right: 100%
-}
-.col-xs-pull-9 {
-	right: 90%
-}
-.col-xs-pull-8 {
-	right: 80%
-}
-.col-xs-pull-7 {
-	right: 70%
-}
-.col-xs-pull-6 {
-	right: 60%
-}
-.col-xs-pull-5 {
-	right: 50%
-}
-.col-xs-pull-4 {
-	right: 40%
-}
-.col-xs-pull-3 {
-	right: 30%
-}
-.col-xs-pull-2 {
-	right: 20%
-}
-.col-xs-pull-1 {
-	right: 10%
-}
-.col-xs-pull-0 {
-	right: auto
-}
-.col-xs-push-10 {
-	left: 100%
-}
-.col-xs-push-9 {
-	left: 90%
-}
-.col-xs-push-8 {
-	left: 80%
-}
-.col-xs-push-7 {
-	left: 70%
-}
-.col-xs-push-6 {
-	left: 60%
-}
-.col-xs-push-5 {
-	left: 50%
-}
-.col-xs-push-4 {
-	left: 40%
-}
-.col-xs-push-3 {
-	left: 30%
-}
-.col-xs-push-2 {
-	left: 20%
-}
-.col-xs-push-1 {
-	left: 10%
-}
-.col-xs-push-0 {
-	left: auto
-}
-.col-xs-offset-10 {
-	margin-left: 100%
-}
-.col-xs-offset-9 {
-	margin-left: 90%
-}
-.col-xs-offset-8 {
-	margin-left: 80%
-}
-.col-xs-offset-7 {
-	margin-left: 70%
-}
-.col-xs-offset-6 {
-	margin-left: 60%
-}
-.col-xs-offset-5 {
-	margin-left: 50%
-}
-.col-xs-offset-4 {
-	margin-left: 40%
-}
-.col-xs-offset-3 {
-	margin-left: 30%
-}
-.col-xs-offset-2 {
-	margin-left: 20%
-}
-.col-xs-offset-1 {
-	margin-left: 10%
-}
-.col-xs-offset-0 {
-	margin-left: 0
-}
-@media (min-width: 768px) {
-	.col-sm-1,
-	.col-sm-10,
-	.col-sm-2,
-	.col-sm-3,
-	.col-sm-4,
-	.col-sm-5,
-	.col-sm-6,
-	.col-sm-7,
-	.col-sm-8,
-	.col-sm-9 {
-		float: left
-	}
-	.col-sm-10 {
-		width: 100%
-	}
-	.col-sm-9 {
-		width: 90%
-	}
-	.col-sm-8 {
-		width: 80%
-	}
-	.col-sm-7 {
-		width: 70%
-	}
-	.col-sm-6 {
-		width: 60%
-	}
-	.col-sm-5 {
-		width: 50%
-	}
-	.col-sm-4 {
-		width: 40%
-	}
-	.col-sm-3 {
-		width: 30%
-	}
-	.col-sm-2 {
-		width: 20%
-	}
-	.col-sm-1 {
-		width: 10%
-	}
-	.col-sm-pull-10 {
-		right: 100%
-	}
-	.col-sm-pull-9 {
-		right: 90%
-	}
-	.col-sm-pull-8 {
-		right: 80%
-	}
-	.col-sm-pull-7 {
-		right: 70%
-	}
-	.col-sm-pull-6 {
-		right: 60%
-	}
-	.col-sm-pull-5 {
-		right: 50%
-	}
-	.col-sm-pull-4 {
-		right: 40%
-	}
-	.col-sm-pull-3 {
-		right: 30%
-	}
-	.col-sm-pull-2 {
-		right: 20%
-	}
-	.col-sm-pull-1 {
-		right: 10%
-	}
-	.col-sm-pull-0 {
-		right: auto
-	}
-	.col-sm-push-10 {
-		left: 100%
-	}
-	.col-sm-push-9 {
-		left: 90%
-	}
-	.col-sm-push-8 {
-		left: 80%
-	}
-	.col-sm-push-7 {
-		left: 70%
-	}
-	.col-sm-push-6 {
-		left: 60%
-	}
-	.col-sm-push-5 {
-		left: 50%
-	}
-	.col-sm-push-4 {
-		left: 40%
-	}
-	.col-sm-push-3 {
-		left: 30%
-	}
-	.col-sm-push-2 {
-		left: 20%
-	}
-	.col-sm-push-1 {
-		left: 10%
-	}
-	.col-sm-push-0 {
-		left: auto
-	}
-	.col-sm-offset-10 {
-		margin-left: 100%
-	}
-	.col-sm-offset-9 {
-		margin-left: 90%
-	}
-	.col-sm-offset-8 {
-		margin-left: 80%
-	}
-	.col-sm-offset-7 {
-		margin-left: 70%
-	}
-	.col-sm-offset-6 {
-		margin-left: 60%
-	}
-	.col-sm-offset-5 {
-		margin-left: 50%
-	}
-	.col-sm-offset-4 {
-		margin-left: 40%
-	}
-	.col-sm-offset-3 {
-		margin-left: 30%
-	}
-	.col-sm-offset-2 {
-		margin-left: 20%
-	}
-	.col-sm-offset-1 {
-		margin-left: 10%
-	}
-	.col-sm-offset-0 {
-		margin-left: 0
-	}
-}
-@media (min-width: 992px) {
-	.col-md-1,
-	.col-md-10,
-	.col-md-2,
-	.col-md-3,
-	.col-md-4,
-	.col-md-5,
-	.col-md-6,
-	.col-md-7,
-	.col-md-8,
-	.col-md-9 {
-		float: left
-	}
-	.col-md-10 {
-		width: 100%
-	}
-	.col-md-9 {
-		width: 90%
-	}
-	.col-md-8 {
-		width: 80%
-	}
-	.col-md-7 {
-		width: 70%
-	}
-	.col-md-6 {
-		width: 60%
-	}
-	.col-md-5 {
-		width: 50%
-	}
-	.col-md-4 {
-		width: 40%
-	}
-	.col-md-3 {
-		width: 30%
-	}
-	.col-md-2 {
-		width: 20%
-	}
-	.col-md-1 {
-		width: 10%
-	}
-	.col-md-pull-10 {
-		right: 100%
-	}
-	.col-md-pull-9 {
-		right: 90%
-	}
-	.col-md-pull-8 {
-		right: 80%
-	}
-	.col-md-pull-7 {
-		right: 70%
-	}
-	.col-md-pull-6 {
-		right: 60%
-	}
-	.col-md-pull-5 {
-		right: 50%
-	}
-	.col-md-pull-4 {
-		right: 40%
-	}
-	.col-md-pull-3 {
-		right: 30%
-	}
-	.col-md-pull-2 {
-		right: 20%
-	}
-	.col-md-pull-1 {
-		right: 10%
-	}
-	.col-md-pull-0 {
-		right: auto
-	}
-	.col-md-push-10 {
-		left: 100%
-	}
-	.col-md-push-9 {
-		left: 90%
-	}
-	.col-md-push-8 {
-		left: 80%
-	}
-	.col-md-push-7 {
-		left: 70%
-	}
-	.col-md-push-6 {
-		left: 60%
-	}
-	.col-md-push-5 {
-		left: 50%
-	}
-	.col-md-push-4 {
-		left: 40%
-	}
-	.col-md-push-3 {
-		left: 30%
-	}
-	.col-md-push-2 {
-		left: 20%
-	}
-	.col-md-push-1 {
-		left: 10%
-	}
-	.col-md-push-0 {
-		left: auto
-	}
-	.col-md-offset-10 {
-		margin-left: 100%
-	}
-	.col-md-offset-9 {
-		margin-left: 90%
-	}
-	.col-md-offset-8 {
-		margin-left: 80%
-	}
-	.col-md-offset-7 {
-		margin-left: 70%
-	}
-	.col-md-offset-6 {
-		margin-left: 60%
-	}
-	.col-md-offset-5 {
-		margin-left: 50%
-	}
-	.col-md-offset-4 {
-		margin-left: 40%
-	}
-	.col-md-offset-3 {
-		margin-left: 30%
-	}
-	.col-md-offset-2 {
-		margin-left: 20%
-	}
-	.col-md-offset-1 {
-		margin-left: 10%
-	}
-	.col-md-offset-0 {
-		margin-left: 0
-	}
-}
-@media (min-width: 1200px) {
-	.col-lg-1,
-	.col-lg-10,
-	.col-lg-2,
-	.col-lg-25,
-	.col-lg-3,
-	.col-lg-4,
-	.col-lg-5,
-	.col-lg-6,
-	.col-lg-7,
-	.col-lg-8,
-	.col-lg-9 {
-		float: left
-	}
-	.col-lg-10 {
-		width: 100%
-	}
-	.col-lg-9 {
-		width: 90%
-	}
-	.col-lg-8 {
-		width: 80%
-	}
-	.col-lg-7 {
-		width: 70%
-	}
-	.col-lg-6 {
-		width: 60%
-	}
-	.col-lg-5 {
-		width: 50%
-	}
-	.col-lg-4 {
-		width: 40%
-	}
-	.col-lg-3 {
-		width: 30%
-	}
-	.col-lg-2 {
-		width: 20%
-	}
-	.col-lg-25 {
-		width: 25%
-	}
-	.col-lg-1 {
-		width: 10%
-	}
-	.col-lg-pull-10 {
-		right: 100%
-	}
-	.col-lg-pull-9 {
-		right: 90%
-	}
-	.col-lg-pull-8 {
-		right: 80%
-	}
-	.col-lg-pull-7 {
-		right: 70%
-	}
-	.col-lg-pull-6 {
-		right: 60%
-	}
-	.col-lg-pull-5 {
-		right: 50%
-	}
-	.col-lg-pull-4 {
-		right: 40%
-	}
-	.col-lg-pull-3 {
-		right: 30%
-	}
-	.col-lg-pull-2 {
-		right: 20%
-	}
-	.col-lg-pull-1 {
-		right: 10%
-	}
-	.col-lg-pull-0 {
-		right: auto
-	}
-	.col-lg-push-10 {
-		left: 100%
-	}
-	.col-lg-push-9 {
-		left: 90%
-	}
-	.col-lg-push-8 {
-		left: 80%
-	}
-	.col-lg-push-7 {
-		left: 70%
-	}
-	.col-lg-push-6 {
-		left: 60%
-	}
-	.col-lg-push-5 {
-		left: 50%
-	}
-	.col-lg-push-4 {
-		left: 40%
-	}
-	.col-lg-push-3 {
-		left: 30%
-	}
-	.col-lg-push-2 {
-		left: 20%
-	}
-	.col-lg-push-1 {
-		left: 10%
-	}
-	.col-lg-push-0 {
-		left: auto
-	}
-	.col-lg-offset-10 {
-		margin-left: 100%
-	}
-	.col-lg-offset-9 {
-		margin-left: 90%
-	}
-	.col-lg-offset-8 {
-		margin-left: 80%
-	}
-	.col-lg-offset-7 {
-		margin-left: 70%
-	}
-	.col-lg-offset-6 {
-		margin-left: 60%
-	}
-	.col-lg-offset-5 {
-		margin-left: 50%
-	}
-	.col-lg-offset-4 {
-		margin-left: 40%
-	}
-	.col-lg-offset-3 {
-		margin-left: 30%
-	}
-	.col-lg-offset-2 {
-		margin-left: 20%
-	}
-	.col-lg-offset-1 {
-		margin-left: 10%
-	}
-	.col-lg-offset-0 {
-		margin-left: 0
-	}
-}
+
 caption {
 	padding-top: 8px;
 	padding-bottom: 8px;
@@ -5943,14 +5306,14 @@ button.close {
 		float: right;
 		content: "\f0d7";
 		color: #454545;
-		font: normal normal normal 14px/20px FontAwesome;  
+		font: normal normal normal 14px/20px FontAwesome;
 	}
 	.open-close.unactive:before{
 		float: right;
 		content: "\f0d8";
 		color: #454545;
-		font: normal normal normal 14px/20px FontAwesome;  
-	} 
+		font: normal normal normal 14px/20px FontAwesome;
+	}
 	/* cap 2*/
 
 	.category-2 > .cate-2 > a {
@@ -5993,14 +5356,14 @@ button.close {
 		float: right;
 		content: "\f0d7";
 		color: #454545;
-		font: normal normal normal 14px/20px FontAwesome;  
+		font: normal normal normal 14px/20px FontAwesome;
 	}
 	.open-close-2.unactive:before{
 		float: right;
 		content: "\f0d8";
 		color: #454545;
-		font: normal normal normal 14px/20px FontAwesome;  
-	} 
+		font: normal normal normal 14px/20px FontAwesome;
+	}
 
 
 	/* cap 3*/
@@ -6043,14 +5406,14 @@ button.close {
 		float: right;
 		content: "\f0d7";
 		color: #454545;
-		font: normal normal normal 14px/20px FontAwesome;  
+		font: normal normal normal 14px/20px FontAwesome;
 	}
 	.open-close-3.unactive:before{
 		float: right;
 		content: "\f0d8";
 		color: #454545;
-		font: normal normal normal 14px/20px FontAwesome;  
-	} 
+		font: normal normal normal 14px/20px FontAwesome;
+	}
 
 
 	/* menu left */
@@ -12619,7 +11982,7 @@ iframe[name=google_conversion_frame] {
 	#viewGift .modal-content{
 		max-width: 800px;
 		margin: 0 auto;
-	} 
+	}
 }
 #viewGift .modal-header{
 	text-align:center;
@@ -14984,7 +14347,7 @@ ul#list-cuahang li:hover a span {
 }
 .list-sp ul li{
 	display:inline-block;
-	list-style:none;	
+	list-style:none;
 }
 .last-sp{
 	background-color:#f5f6f8;
@@ -15007,7 +14370,7 @@ ul#list-cuahang li:hover a span {
 	display:block;
 	font-size:large;
 	font-style:italic;
-	padding-top:10px;	
+	padding-top:10px;
 }
 /* ---------------------------- */
 
@@ -15135,7 +14498,7 @@ ul#list-cuahang li:hover a span {
 }
 
 .price-info .price-new-old{
-	text-align:center;    
+	text-align:center;
 	font-weight: bold;
 }
 .prodAbGift{
@@ -15169,7 +14532,7 @@ ul.menu_footer {
 	padding: 14px 10px 13px;
 }
 
-.menu_footer li{ 
+.menu_footer li{
 	text-align: center; display: inline-block;
 	padding: 14px 35px 13px;
 }
