--- a/public/shop/assets/hstatic.net/969/1000003969/1000161857/blog-new.css?v=8910.css
+++ b/public/shop/assets/hstatic.net/969/1000003969/1000161857/blog-new.css?v=8910.css
@@ -207,10 +207,10 @@ header .search button {
 	margin-bottom:20px;
 }
 .blog-read-item .item-img{
-	width:30%;
-	height:80px;
-	display: flex;
-	align-items: center;
+	// width:30%;
+	// height:80px;
+	// display: flex;
+	// align-items: center;
 }
 .blog-read-item .item-img span {
 	display: block;
@@ -385,7 +385,7 @@ span.date{
 	margin-top: 20px;
 	padding: 15px 20px 15px 25px;
 }
-.blog-insert-item .content{ 
+.blog-insert-item .content{
 	background:url('../../../434/1000006434/1000066622/nhay-kep.png%3Fv=199') top left no-repeat;
 	padding-left: 35px;
 	color: #fff;
@@ -469,7 +469,7 @@ span.date{
 }
 
 h2.parent {
-	background: #3AA0A2;	
+	background: #3AA0A2;
 	display: table;
 	padding: 6px 10px;
 	font-size: 15px;
@@ -1144,9 +1144,9 @@ h3.insert-title{
 	color:black;
 	line-height:24px;
 }
-.spanfont{	
-	font-family: "Times New Roman"; 
-	font-style: italic; 
+.spanfont{
+	font-family: "Times New Roman";
+	font-style: italic;
 	font-size:16px;
 	color:#333;
 }
