--- a/public/shop/assets/hstatic.net/969/1000003969/1000161857/style.full.css?v=8910.css
+++ b/public/shop/assets/hstatic.net/969/1000003969/1000161857/style.full.css?v=8910.css
@@ -3259,7 +3259,7 @@ iframe[name=google_conversion_frame] {
 	transform: translate(25%,0)
 }
 header .top#mobile-menu {
-	padding: 26px 0
+	// padding: 26px 0
 }
 #mobile-menu .fixed-nav {
 	position: fixed;
