--- a/public/shop/assets/css/shop.css
+++ b/public/shop/assets/css/shop.css
@@ -382,3 +382,21 @@
   object-fit: cover;
   object-position: center center;
 }
+#post-detail #orther-article .link {
+  display: block;
+  overflow: hidden;
+  height: 125px;
+}
+#post-detail #orther-article .link .item-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
+#post-detail #orther-article .title {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  height: 2.5em;
+}
