--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -302,3 +302,23 @@
         }
     }
 }
+
+#cart-container {
+    .btn-update, .btn-clear {
+        padding: 8px 50px;
+        border-radius: 0;
+        background: #ccc;
+        border: #ccc;
+        color: #000;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+    .btn-checkout {
+        padding: 8px 50px;
+        background: #e32124;
+        color: #fff;
+        font-weight: bold;
+        text-transform: uppercase;
+        border-radius: 0;
+    }
+}
