edit header, footer

--- a/public/shop/assets/css/shop.css
+++ b/public/shop/assets/css/shop.css
@@ -268,6 +268,8 @@
 }
 .menu_footer .link .image {
   height: 100px;
+  object-fit: cover;
+  object-position: center center;
 }
 .footer-colsystem {
   margin-bottom: 20px;
