--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -150,6 +150,8 @@
         display: block;
         .image {
             height: 100px;
+            object-fit: cover;
+            object-position: center center;
         }
     }
 }
