infica input tag

--- a/public/bundle/style.css
+++ b/public/bundle/style.css
@@ -1,3 +1,6 @@
+.infica-tags-input-container .infica-tag-item {
+  background-color: #ccc;
+  padding: 5px 10px; }
 #detail-product .sec-properties {
   padding: 5px 0;
 }
