--- a/public/shop/assets/css/shop.css
+++ b/public/shop/assets/css/shop.css
@@ -420,3 +420,60 @@
   text-transform: uppercase;
   border-radius: 0;
 }
+#store-container h1 {
+  font-size: 18px;
+  text-transform: uppercase;
+}
+#store-container h2 {
+  font-size: 18px;
+  text-transform: uppercase;
+}
+#store-container .store-item {
+  display: block;
+}
+#store-container .store-item .store-link {
+  color: #444;
+  font-weight: bold;
+}
+#store-container .product-section .product-item {
+  margin-bottom: 15px;
+}
+#store-container .product-section .product-item .link {
+  position: relative;
+  display: block;
+}
+#store-container .product-section .product-item .link .img {
+  display: block;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  object-position: center center;
+}
+#store-container .product-section .product-item .link .info {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  padding: 5px 10px;
+}
+#store-container .product-section .product-item .link .price,
+#store-container .product-section .product-item .link .name {
+  display: block;
+}
+#store-container .product-section .product-item .link .price {
+  font-size: 24px;
+  color: #ccc;
+  color: #e32124;
+  font-weight: bold;
+  display: block;
+}
+#store-container .product-section .product-item .link .name {
+  font-size: 14px;
+  padding-top: 5px;
+  color: #fff;
+  white-space: normal;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
