--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -324,3 +324,64 @@
         border-radius: 0;
     }
 }
+
+#store-container {
+    h1 {
+        font-size: 18px;
+        text-transform: uppercase;
+    }
+    h2 {
+        font-size: 18px;
+        text-transform: uppercase;
+    }
+    .store-item {
+        display: block;
+        .store-link {
+            color: #444;
+            font-weight: bold;
+        }
+    }
+    .product-section {
+        .product-item {
+            margin-bottom: 15px;
+            .link {
+                position: relative;
+                display: block;
+                .img {
+                    display: block;
+                    width: 100%;
+                    height: 250px;
+                    object-fit: cover;
+                    object-position: center center;
+                }
+                .info {
+                    display: block;
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    background: rgba(0,0,0,.6);
+                    width: 100%;
+                    padding: 5px 10px;
+                }
+                .price,.name {
+                    display: block;
+                }
+                .price {
+                    font-size: 24px;
+                    color: #ccc;
+                    color: #e32124;
+                    font-weight: bold;
+                    display: block;
+                }
+                .name {
+                    font-size: 14px;
+                    padding-top: 5px;
+                    color: #fff;
+                    white-space: normal;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                }
+            }
+        }
+    }
+}
