--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -226,7 +226,7 @@ body {
         }
     }
     .sec-policies-feature {
-        &.fixed {
+        &.policy-fixed {
             @media only screen and (min-width: 1220px) {
                 position: fixed;
                 right: 75px;
