--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -196,7 +196,7 @@ body {
     }
 }
 
-#detail-product {
+#product.product-detail-container {
     .thumbnail {
         height: 50px;
         width: 50px;
