--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -258,6 +258,11 @@ body {
             max-width: 100%;
         }
     }
+    .description {
+        img {
+            max-width: 100%;
+        }
+    }
 }
 
 .ClickBlogItem {
