--- a/public/shop/assets/css/shop.css
+++ b/public/shop/assets/css/shop.css
@@ -306,7 +306,7 @@
   width: 100px;
   display: block;
 }
-#detail-product .thumbnail {
+#product.product-detail-container .thumbnail {
   height: 50px;
   width: 50px;
   display: block;
@@ -315,31 +315,31 @@
   padding: 0;
   margin: 5px 5px 5px 0;
 }
-#detail-product .thumbnail img {
+#product.product-detail-container .thumbnail img {
   margin-top: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center center;
 }
-#detail-product .image-product-carousel {
+#product.product-detail-container .image-product-carousel {
   height: 250px;
   width: 100%;
   object-fit: cover;
   object-position: center center;
 }
 @media only screen and (min-width: 480px) {
-  #detail-product .image-product-carousel {
+  #product.product-detail-container .image-product-carousel {
     height: 350px;
   }
 }
 @media only screen and (min-width: 768px) {
-  #detail-product .image-product-carousel {
+  #product.product-detail-container .image-product-carousel {
     height: 400px;
   }
 }
 @media only screen and (min-width: 1220px) {
-  #detail-product .sec-policies-feature.fixed {
+  #product.product-detail-container .sec-policies-feature.policy-fixed {
     position: fixed;
     right: 75px;
     background: #fff;
@@ -347,25 +347,28 @@
     top: 10px;
   }
 }
-#detail-product #spec {
+#product.product-detail-container #spec {
   overflow: hidden;
   padding: 20px 0 20px 0;
 }
-#detail-product #spec .heading {
+#product.product-detail-container #spec .heading {
   text-transform: uppercase;
   font-size: 14px;
   border-bottom: 1px solid #ccc;
   position: relative;
   margin: 0 0 20px 0;
 }
-#detail-product #spec .heading span {
+#product.product-detail-container #spec .heading span {
   border-bottom: 2px solid #d61c1f;
   display: inline-block;
   margin-bottom: -1px;
   font-weight: bold;
   padding: 5px 0;
 }
-#detail-product #spec img {
+#product.product-detail-container #spec img {
+  max-width: 100%;
+}
+#product.product-detail-container .description img {
   max-width: 100%;
 }
 .ClickBlogItem {
