--- a/public/shop/assets/hstatic.net/969/1000003969/1000161857/style.full.css?v=8910.css
+++ b/public/shop/assets/hstatic.net/969/1000003969/1000161857/style.full.css?v=8910.css
@@ -3270,6 +3270,7 @@ header .top#mobile-menu {
 	width: 100%;
 	background: #fff;
 	border-bottom: 1px solid #EEE;
+	box-shadow: 0px 0px 3px #ccc;
 	z-index: 999999
 }
 #mobile-menu .navbar-toggle {
