--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -240,20 +240,6 @@ body {
     #spec {
         overflow: hidden;
         padding: 20px 0 20px 0;
-        .heading {
-            text-transform: uppercase;
-            font-size: 14px;
-            border-bottom: 1px solid #ccc;
-            position: relative;
-            margin: 0 0 20px 0;
-            span {
-                border-bottom: 2px solid #d61c1f;
-                display: inline-block;
-                margin-bottom: -1px;
-                font-weight: bold;
-                padding: 5px 0;
-            }
-        }
         img {
             max-width: 100%;
         }
@@ -261,6 +247,25 @@ body {
     .description {
         img {
             max-width: 100%;
+        }
+    }
+    .sec-heading {
+        text-transform: uppercase;
+        font-size: 14px;
+        border-bottom: 1px solid #ccc;
+        position: relative;
+        margin: 0 0 20px 0;
+        span {
+            border-bottom: 2px solid #d61c1f;
+            display: inline-block;
+            margin-bottom: -1px;
+            font-weight: bold;
+            padding: 5px 0;
+        }
+    }
+    .sec-related-product {
+        .heading {
+
         }
     }
 }
