--- a/public/shop/assets/css/shop.css
+++ b/public/shop/assets/css/shop.css
@@ -569,3 +569,9 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
+#home-slider .img {
+  height: 500px;
+  width: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
