--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -495,3 +495,12 @@ body {
         }
     }
 }
+
+#home-slider {
+    .img {
+        height: 500px;
+        width: 100%;
+        object-fit: cover;
+        object-position: center center;
+    }
+}
