--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -268,6 +268,22 @@ body {
 
         }
     }
+    .nav-tabs>li>a {
+        font-weight: bold;
+        text-transform: uppercase;
+        color: #555;
+        border: none;
+        border-bottom: 2px solid transparent;
+    }
+    .nav-tabs > li.active > a {
+        border: none;
+        border-bottom: 2px solid #d61c1f;
+    }
+    .tab-content {
+        .tab-pane {
+            padding-top: 10px;
+        }
+    }
 }
 
 .ClickBlogItem {
