--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -284,6 +284,11 @@ body {
             padding-top: 10px;
         }
     }
+    #descriptionproduct {
+        img {
+            max-width: 100%;
+        }
+    }
 }
 
 .ClickBlogItem {
