--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -230,10 +230,11 @@ body {
             @media only screen and (min-width: 1220px) {
                 position: fixed;
                 right: 75px;
-                // z-index: -1;
+                z-index: 100;
                 background: #fff;
                 width: 290px;
-                top: 10px;
+                top: 0px;
+                transition: all 1s;
             }
         }
     }
