--- a/public/shop/assets/css/shop.css
+++ b/public/shop/assets/css/shop.css
@@ -280,7 +280,7 @@
   margin-bottom: 20px;
 }
 .breadcrumb {
-  margin-top: 30px;
+  margin-top: 5px;
 }
 #cartform .link {
   display: block;
@@ -341,10 +341,9 @@
 @media only screen and (min-width: 1220px) {
   #product.product-detail-container .sec-policies-feature.policy-fixed {
     position: fixed;
-    right: 75px;
     z-index: 100;
     background: #fff;
-    width: 290px;
+    width: 234px;
     top: 0px;
     transition: all 1s;
   }
@@ -387,6 +386,9 @@
 #product.product-detail-container .tab-content .tab-pane {
   padding-top: 10px;
 }
+#product.product-detail-container .tab-content .tab-pane img {
+  max-width: 100%;
+}
 #product.product-detail-container #descriptionproduct img {
   max-width: 100%;
 }
@@ -407,6 +409,16 @@
 }
 #product.product-detail-container .thumbnails-hidden .slider-controls .right {
   right: 0;
+}
+@media only screen and (min-width: 1200px) {
+  #product.product-detail-container .col-sys-left-wrapper {
+    width: 80%;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #product.product-detail-container .store-wrapper {
+    width: 20%;
+  }
 }
 .ClickBlogItem {
   display: block;
