--- a/public/shop/assets/css/shop.css
+++ b/public/shop/assets/css/shop.css
@@ -307,13 +307,18 @@
   display: block;
 }
 #product.product-detail-container .thumbnail {
-  height: 50px;
-  width: 50px;
+  height: 67px;
+  width: 90px;
   display: block;
   overflow: hidden;
   float: left;
   padding: 0;
-  margin: 5px 5px 5px 0;
+  margin: 5px 10px 5px 0;
+  object-fit: cover;
+  object-position: center center;
+}
+#product.product-detail-container .thumbnail.last {
+  margin-right: 0;
 }
 #product.product-detail-container .thumbnail img {
   margin-top: 0;
