--- a/public/shop/assets/css/shop.less
+++ b/public/shop/assets/css/shop.less
@@ -557,7 +557,7 @@ body {
 
 #home-slider {
     .img {
-        height: 500px;
+        max-height: 500px;
         width: 100%;
         object-fit: cover;
         object-position: center center;
