--- a/public/shop/assets/css/shop.css
+++ b/public/shop/assets/css/shop.css
@@ -624,7 +624,7 @@
   overflow: hidden;
 }
 #home-slider .img {
-  height: 500px;
+  max-height: 500px;
   width: 100%;
   object-fit: cover;
   object-position: center center;
