--- a/public/shop/assets/hstatic.net/969/1000003969/1000161857/blog-new.css?v=8910.css
+++ b/public/shop/assets/hstatic.net/969/1000003969/1000161857/blog-new.css?v=8910.css
@@ -123,7 +123,7 @@ header .search button {
 }
 .blog-slider-item img{
 	width:100%;
-	height:535px;
+	height:auto;
 	overflow:hidden;
 }
 .blog-slider-item .blog-slider-info {
