--- a/public/css/plugins/summernote/summernote-bs3.css
+++ b/public/css/plugins/summernote/summernote-bs3.css
@@ -545,10 +545,10 @@
   .note-editor .dl-horizontal dd:after {
     content: " ";
     /* 1 */
-  
+
     display: table;
     /* 2 */
-  
+
   }
   .note-editor .dl-horizontal dd:after {
     clear: both;
@@ -557,10 +557,10 @@
   .note-editor .dl-horizontal dd:after {
     content: " ";
     /* 1 */
-  
+
     display: table;
     /* 2 */
-  
+
   }
   .note-editor .dl-horizontal dd:after {
     clear: both;
@@ -5013,7 +5013,7 @@ button.note-editor .close {
 .modal-dialog {
   margin-left: auto;
   margin-right: auto;
-  width: auto;
+  // width: auto;
   padding: 10px;
   z-index: 1050;
 }
@@ -5103,9 +5103,9 @@ button.note-editor .close {
 }
 @media screen and (min-width: 768px) {
   .modal-dialog {
-    width: 600px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    // width: 600px;
+    // padding-top: 30px;
+    // padding-bottom: 30px;
   }
   .modal-content {
     -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
